# Asynchronous-DNN

./: .gitignore  CMakeLists.txt
inc/: deep_network.hpp  matrix.hpp  square_matrix.hpp  vector.hpp
ocl/: matrix.ocl  vector.ocl
src/: deep_network.cpp  main.cpp  matrix.cpp  square_matrix.cpp  vector.cpp
